
2016-06-26  Edward Hart <edward.dan.hart@gmail.com>

	* common.*, move.c, string.c: moved cob_max_int and cob_min_int to
	  common.c.

2016-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: minor fixes for compatibility to VC2005

2016-06-20 Ron Norman <rjn@inglenet.com>

	* coblocal.h, common.c: FR #138 identify config variables which accept
	  a path list and any which only accept a single directory/file
	  are checked for the PATH_SEP character and error is given if
	  that has been used by mistake. Example:

	  Invalid value '/temp:/tmp' for configuration tag 'COB_TRACE_FILE';
	       should not contain ':'

2016-06-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c: added (cob_get_scr_cols) and (cob_get_scr_lines) for
	  providing the C interface with the current COBOL screen cols/lines
	* common.h: FR #145: added defines for cobcols, coblines and cobrescanenv
	* common.c, common.h: FR #126: renamed (runtime_env) to (runtime_conf)

2016-05-27  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 - fixed insertion
	  which float are now distinguished from those which don't.

2016-05-23  Brian Tiffin <btiffin@gnu.org>

	* termio.c: Reverted length truncation in cob_accept for numeric fields.

2016-05-22  Edward Hart <edward.dan.hart@gmail.com>

	* common.h, move.c, termio.c: replaced PICTURE strings containing packed
	  ints with array of (cob_pic_symbol) structs which are easier to use.

2016-05-21  Brian Tiffin <btiffin@gnu.org>

	* termio.c: Removed a length test from cob_accept for numeric fields.

2016-04-26  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h: Re-fixed CBL_OC_HOSTED tzname, timezone, daylight
	  for VC2013 names.

2016-04-25  Brian Tiffin <btiffin@gnu.org>

	* common.c: Fixed CBL_OC_HOSTED tzname, timezone, daylight for WIN32 names.

2016-04-23  Brian Tiffin <btiffin@gnu.org>
